Fix archive ul, li and tags align

--- a/assets/css/bettina.css
+++ b/assets/css/bettina.css
@@ -242,6 +242,15 @@ a:hover, a:focus, .navbar-nav > li.active > a:hover{
    padding-top: 0;
    padding-bottom: 0;
 }
+.widget-inner ul li {
+    display: block;
+}
+.widget-inner li {
+	text-align: left;
+}
+.widget-inner li a{
+	text-align: left;
+}
 .nav >li >a{
 	padding: 5px 10px;
 }
@@ -362,7 +371,7 @@ a:hover, a:focus, .navbar-nav > li.active > a:hover{
 
 
 /*Blog sidebar*/
-.widget.widget_search h3, .widget.widget_archive h3{
+.widget.widget_search h3, .widget.widget_archive h3, .widget.widget_tag_cloud h3{
 	text-align: left;
 }
 .widget.widget_archive{
@@ -385,6 +394,11 @@ a:hover, a:focus, .navbar-nav > li.active > a:hover{
     float: left;
     text-align: left;
     width: 100%;
+}
+.widget.widget_archive li{
+    text-align: left !important;
+    list-style-type: square !important;
+    display: list-item;
 }
 
 /*FOOTER*/
